[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/backgroundFelt.png" type="Texture" id=1]
[ext_resource path="res://Assets/Watchword_regular_demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/nextWhite.png" type="Texture" id=4]
[ext_resource path="res://Assets/nexthover.png" type="Texture" id=5]
[ext_resource path="res://Rules.gd" type="Script" id=6]
[ext_resource path="res://deprecated/CollectDataButton.gd" type="Script" id=7]
[ext_resource path="res://MultiplayerButton.gd" type="Script" id=8]
[ext_resource path="res://Tutorial.gd" type="Script" id=9]
[ext_resource path="res://Credits.gd" type="Script" id=10]
[ext_resource path="res://Quit.gd" type="Script" id=11]
[ext_resource path="res://Assets/Power.png" type="Texture" id=12]
[ext_resource path="res://Assets/PowerPress.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=6]
size = 250
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1062.69, 255.56 )
scale = Vector2( 1.01146, 1.03079 )
texture = ExtResource( 1 )
offset = Vector2( -106.151, 274.404 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial" type="Label" parent="."]
margin_left = 3.0
margin_top = 101.0
margin_right = 1920.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 918, 57 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Tutorial"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rules" type="Label" parent="."]
margin_left = 2.0
margin_top = 327.0
margin_right = 1919.0
margin_bottom = 441.0
rect_pivot_offset = Vector2( 920, 57 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Rules"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectData" type="Label" parent="."]
visible = false
margin_left = 627.921
margin_top = 442.383
margin_right = 1265.92
margin_bottom = 673.383
rect_pivot_offset = Vector2( -1262.85, -482.581 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "COLLECT DATA
"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCount" type="Label" parent="."]
visible = false
margin_left = 578.784
margin_top = 203.061
margin_right = 1096.79
margin_bottom = 334.061
rect_pivot_offset = Vector2( 240.42, 95.5417 )
custom_fonts/font = SubResource( 1 )
text = "Players:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="."]
visible = false
margin_left = 802.745
margin_top = 207.925
margin_right = 1320.74
margin_bottom = 338.925
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 240.42, 95.5417 )
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureButton" parent="."]
visible = false
margin_left = 1091.68
margin_top = 205.273
margin_right = 1351.69
margin_bottom = 485.273
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Games" type="Label" parent="."]
visible = false
margin_left = 563.501
margin_top = 550.685
margin_right = 1081.51
margin_bottom = 681.685
rect_pivot_offset = Vector2( 240.42, 95.5417 )
custom_fonts/font = SubResource( 1 )
text = "Games:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamesInput" type="LineEdit" parent="."]
visible = false
margin_left = 999.718
margin_top = 567.002
margin_right = 1569.72
margin_bottom = 681.002
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "1000"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Label" parent="."]
margin_left = 2.0
margin_top = 773.0
margin_right = 1916.0
margin_bottom = 1004.0
rect_pivot_offset = Vector2( -1262.85, -482.581 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Join Lobby
"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
margin_left = 2.0
margin_top = 549.0
margin_right = 1919.0
margin_bottom = 663.0
rect_pivot_offset = Vector2( 920, 57 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 1
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 102.0
margin_top = 964.0
margin_right = 1126.0
margin_bottom = 1988.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
flip_h = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="Quit"]
margin_left = -500.0
margin_top = 375.0
margin_right = 199.0
margin_bottom = 691.0
custom_fonts/font = SubResource( 6 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Tutorial" to="Tutorial" method="_on_Custom_Simulation_mouse_entered"]
[connection signal="mouse_exited" from="Tutorial" to="Tutorial" method="_on_Custom_Simulation_mouse_exited"]
[connection signal="mouse_entered" from="Rules" to="Rules" method="_on_Custom_Simulation_mouse_entered"]
[connection signal="mouse_exited" from="Rules" to="Rules" method="_on_Custom_Simulation_mouse_exited"]
[connection signal="mouse_entered" from="CollectData" to="CollectData" method="_on_CollectData_mouse_entered"]
[connection signal="mouse_exited" from="CollectData" to="CollectData" method="_on_CollectData_mouse_exited"]
[connection signal="pressed" from="Arrow" to="." method="_on_Arrow_pressed"]
[connection signal="text_changed" from="GamesInput" to="." method="_on_GamesInput_text_changed"]
[connection signal="mouse_entered" from="Multiplayer" to="Multiplayer" method="_on_Multiplayer_mouse_entered"]
[connection signal="mouse_exited" from="Multiplayer" to="Multiplayer" method="_on_Multiplayer_mouse_exited"]
[connection signal="mouse_entered" from="Credits" to="Credits" method="_on_Custom_Simulation_mouse_entered"]
[connection signal="mouse_exited" from="Credits" to="Credits" method="_on_Custom_Simulation_mouse_exited"]
[connection signal="pressed" from="Quit" to="Quit" method="_on_Quit_pressed"]
